--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
     <title>Document</title>
 </head>
-<body>
+<body style="background-color:#ebd09f;">
     <h1 style="text-align: center; font-family:'Courier New', Courier, monospace">There is nothing at the moment &#129299; </h1>
 </body>
 </html>
