--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+<script src="script.js"></script>
     <title>Document</title>
 </head>
 <body style="background-color:#ebd09f;">
-    <h1 style="text-align: center; font-family:'Courier New', Courier, monospace">There is nothing at the moment &#129299; </h1>
+    <h1 id="heading" style="text-align: center; font-family:'Courier New', Courier, monospace"></h1>
 </body>
 </html>
