adding a dumb button

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 </head>
 <body style="background-color:#ebd09f;">
     <h1 id="heading" style="text-align: center; font-family:'Courier New', Courier, monospace"></h1>
+    <button onclick="run()">click me</button>
 </body>
 </html>
